# Liteimage

./: .gitignore  AppIcon.icns  Package.swift  README.md  README_en.md  build.sh  build_app.sh  build_err.txt  package-lock.json  package.json  project.yml  vite.config.ts
Assets.xcassets/AppIcon.appiconset/: Contents.json
LiteImagePng.xcodeproj/: project.pbxproj
Resources/: gifski  pngquant
Sources/: CompressorViewModel.swift  ContentView.swift  DropZoneView.swift  GIFConversionView.swift  GIFConverterViewModel.swift  LocalCompressorService.swift  Localizable.swift  SettingsView.swift  SharedTypes.swift  TinyPNGService.swift  TinyPNG_CompressorApp.swift
Sources/en.lproj/: Localizable.strings
Sources/zh-Hans.lproj/: Localizable.strings
docs/: 视频转GIF技术方案.md
icon/: icon.ai
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/resources/: README.md
src-tauri/src/: embedded_resources.rs  logger.rs  main.rs  tinypng.rs
src/components/: ImageCompress.css  ImageCompress.tsx  Settings.css  Settings.tsx  VideoToGif.css  VideoToGif.tsx
